
This document provides a high-level view of the changes introduced in {project-name} by release.
For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.

== 0.3.0dev

// missing release title

Enhancements::
* New profile: Windows 7 64-bit: win7_64_analyst (#42)
* Support for trial versions of Windows 7 Enterprise x86 and x64
* debug: Passes -on-error=abort to packer to allow investigation of failures (#35)
* Better out of the box support of Fedora, CentOS and RedHat as host (#53)
* Use user cache directories for packer. This avoids caching in memory-backed locations to
  prevent unnecessary memory pressure during builds or free space issues on
  low RAM systems (#45)
* Documentation improvements

Bug fixes::
* NetworkLocation changes for Windows 7 solves a class of 'Timeout waiting for WinRM' errors (#33, #43, #60)
* Increased WinRM memory limit on Windows 7 solves errors installing .Net Framework 4.0 (#31, #44)
* More Windows 7 .Net Framework 4.0 fixes (#59)

////
=== Release meta

Released by

// {uri-repo}/issues?q=milestone%3A1.0.0[issues resolved] |
{uri-repo}/releases/tag/0.2.0[git tag] |
{uri-repo}/compare/0.1.0...0.2.0[full diff]

=== Credits

Thanks to the following people who contributed to this release:
////


== 0.2.0

The _#RSAC gift_ release!

Enhancements::
  * Updated Windows 10 to Anniversary Edition ({uri-issue}21[#21])
  * `pip install` support and documentation ({uri-issue}5[#5])
  * Config: `ida_path` will upload IDA Remote Debugger and open appropriate ports ({uri-issue}8[#8])
  * Config: `tools_path` will upload all of this Path's content into `C:\Tools` ({uri-issue}8[#8])
  * Config: `username` and `password` support ({uri-issue}11[#11])
  * Config: Added `windows_defender`, `windows_updates`, `disk_size` and `choco_packages` options ({uri-issue}11[#11], {uri-issue}14[#14])
  * Provides `fiddler4` instead of `fiddler`